@@ -1,5 +1,24 @@
-FROM eclipse-temurin:21-jre-alpine
+FROM eclipse-temurin:21-jdk-alpine AS jre-builder
+
+RUN $JAVA_HOME/bin/jlink \
+    --add-modules java.base,java.logging,java.naming,java.desktop,java.management,java.security.jgss,java.instrument,java.sql,jdk.unsupported \
+    --strip-debug \
+    --no-man-pages \
+    --no-header-files \
+    --compress=2 \
+    --output /javaruntime
+
+FROM alpine:latest
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH="$JAVA_HOME/bin:$PATH"
+
+COPY --from=jre-builder /javaruntime $JAVA_HOME
+
+WORKDIR /app
 
 COPY target/psychologic.jar app.jar
 
-CMD ["java", "-jar", "./app.jar"]
+RUN addgroup -S spring && adduser -S spring -G spring
+USER spring:spring
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
